Mobius/www/css/index.css
:root {
  --background: #0c0f14;
  --text: #e6edf3;
  --outline: #1d252c;
  --alt-text: #848d97;
  --link: #2f81f7;
  --button: #238636;
  --secondary: #10141a;
  --font-family: Consolas;
}

body, html {
  background-color: var(--background);
  font-family: var(--font-family);
}

@font-face {
  font-family: SegoeIcons;
  src:url("../assets/Segoe_Fluent_Icons.ttf");
}

@font-face {
font-family: Consolas;
src:url("../assets/consola.ttf");
}

::placeholder {
  color: var(--alt-text);
}

#command {
  position: absolute;
  bottom: 0px;
  left: 0;
  height: 70px;
  width: 100%;
  border-top: 1px solid var(--outline);
  background-color: var(--secondary);
}

#input {
  position: relative;
  width: 80%;
  height: 40px;
  top: 5px;
  left: 10px;
  padding-left: 10px;
  background-color: var(--background);
  border: 1px solid var(--outline);
  border-radius: 10px;
  font-size: 13pt;
  outline: none;
  color: var(--text);
  resize: none;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  height: 100px;
  width: 100%;
  border-bottom: 1px solid var(--outline);
  background-color: var(--secondary);
  display: inline-flex;
}

#logo {
  width: 50px;
  height: 50px;
  position: relative;
  left: 5px;
  top: 50px;
}

#run {
  position: relative;
  left: 48%;
  top: 60px;
  font-family: SegoeIcons;
  background-color: transparent;
  width: 30px;
  height: 30px;
  color: var(--alt-text);
  font-size: 16pt;
  border: none;
}

#dbg {
  position: relative;
  left: 45%;
  top: 65px;
  font-family: SegoeIcons;
  background-color: transparent;
  width: 70px;
  height: 30px;
  color: var(--alt-text);
  font-size: 16pt;
  border: none;
  display: inline-flex;
}

#refresh {
  position: relative;
  left: 46%;
  top: 60px;
  font-family: SegoeIcons;
  background-color: transparent;
  width: 30px;
  height: 30px;
  color: var(--alt-text);
  font-size: 16pt;
  border: none;
}

#status {
  position: relative;
  top: -5px;
  margin-right: 5px;
  font-family: SegoeIcons;
  background-color: transparent;
  width: 30px;
  height: 30px;
  color: var(--outline);
  font-size: 16pt;
  border: none;
}

#send {
  position: relative;
  left: 5px;
  top: 15px;
  font-family: SegoeIcons;
  background-color: transparent;
  width: 40px;
  height: 40px;
  color: #9e74ff;
  font-size: 20pt;
  border: none;
}

#textcontainer {
  position: fixed;
  bottom: 0px;
  left: 0px;
  height: 95%;
  width: 100%;
  display: block;
  font-family: Consolas, "Courier New", Courier, monospace;
  background-color: var(--background);
  z-index: -5;
  border: none;
  overflow-y: hidden;
}
  
#editor {
  position: fixed;
  top: 100px;
  left: 50px;
  height: 100%;
  width: 100%;
  background-color: var(--background);
  color: var(--text);
  font-size: 12pt;
  outline: none;
  border: none;
  resize: none;
  padding-left: 5px;
  padding-top: 10px;
  display: block;
  font-family: Consolas;
  white-space: pre;
}
  
#numbers {
  position: fixed;
  width: 20px;
  left: 0px;
  top: 100px;
  font-size: 12pt;
  padding-top: 10px;
  text-align: right;
  font-family: Consolas, 'Courier New', Courier, monospace;
}
  
#numbers span {
  counter-increment: linenumber;
}
  
#numbers span::before {
  content: counter(linenumber);
  display: block;
  color: var(--alt-text);
}

#consol {
  position: fixed;
  top: 110px;
  left: 50%;
  background-color: var(--secondary);
  z-index: 10;
  width: 95%;
  transform: translate(-50%, 0%);
  height: 150px;
  border: 1px solid var(--outline);
  border-radius: 5px;
  resize: none;
  display: none;
  font-family: Consolas;
  color: var(--alt-text);
}

#panel {
  width: 150px;
  height: auto;
  position: fixed;
  top: 110px;
  left: 5px;
  background-color: var(--secondary);
  border: 1px solid var(--outline);
  border-radius: 5px;
  display: none;
}

li {
  color: var(--alt-text);
  text-decoration: none;
  font-family: SegoeIcons;
  font-size: 12pt;
  list-style: none;
  width: 100%;
  margin: 0;
  padding: 10px;
}

a {
  color: var(--alt-text);
  text-decoration: none;
}

